<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/category"
        android:icon="@drawable/ic_baseline_category_24"
        android:title="@string/category"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/category_default"
                android:title="@string/default_"/>
            <item
                android:id="@+id/category_business"
                android:title="@string/category_business"/>
            <item
                android:id="@+id/category_entertainment"
                android:title="@string/category_entertainment"/>
            <item
                android:id="@+id/category_general"
                android:title="@string/category_general"/>
            <item
                android:id="@+id/category_health"
                android:title="@string/category_health"/>
            <item
                android:id="@+id/category_science"
                android:title="@string/category_science"/>
            <item
                android:id="@+id/category_sports"
                android:title="@string/category_sports"/>
            <item
                android:id="@+id/category_technology"
                android:title="@string/category_technology"/>
        </menu>
    </item>
    <item
        android:id="@+id/language"
        android:icon="@drawable/ic_baseline_language_24"
        android:title="@string/language"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/language_default"
                android:title="@string/default_"/>
            <item
                android:id="@+id/language_arabic"
                android:title="@string/language_arabic"/>
            <item
                android:id="@+id/language_english"
                android:title="@string/language_english"/>
            <item
                android:id="@+id/language_french"
                android:title="@string/language_french"/>
            <item
                android:id="@+id/language_german"
                android:title="@string/language_german"/>
            <item
                android:id="@+id/language_spanish"
                android:title="@string/language_spanish"/>
        </menu>
    </item>
    <item
        android:id="@+id/country"
        android:icon="@drawable/ic_baseline_place_24"
        android:title="@string/country"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/country_default"
                android:title="@string/default_"/>
            <item
                android:id="@+id/country_egypt"
                android:title="@string/default_"/>
            <item
                android:id="@+id/country_canada"
                android:title="@string/country_canada"/>
            <item
                android:id="@+id/country_france"
                android:title="@string/country_france"/>
            <item
                android:id="@+id/country_germany"
                android:title="@string/country_germany"/>
            <item
                android:id="@+id/country_usa"
                android:title="@string/country_usa"/>
        </menu>
    </item>

</menu>